<resources>
    <string name="app_name">Allergic Detector Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="calendarBtn">Kalendarz</string>
    <string name="region">Mapa pylenia z podziałem na regiony</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_page_title">ALERGIA ZAWSZE POD KONTROLA</string>
    <string name="allergicMan">UczulonyPan</string>
    <string name="log_in">ZALOGUJ SIĘ</string>
    <string name="register">ZAREJESTRUJ SIĘ</string>
    <string name="e_mail_data">E-MAIL</string>
    <string name="e_mail">ADRES E-MAIL</string>
    <string name="password">HASŁO</string>
    <string name="name">IMIĘ</string>
    <string name="surname">NAZWISKO</string>
    <string name="city">MIASTO</string>
    <string name="cancel">ANULUJ</string>
    <string name="username">IMIĘ NAZWISKO</string>
    <string name="allergens">TWOJE ALERGENY</string>
    <string name="check_product">SPRAWDŹ PRODUKT</string>
    <string name="calendar_dust">KALENDARZ PYLEŃ</string>
    <string name="log_out">WYLOGUJ SIĘ</string>
    <string name="user_allergens">TWOJE ALERGENY</string>
    <string name="add_allergen">DODAJ NOWY ALERGEN</string>
    <string name="allergen">ALERGEN</string>
    <string name="btn_add_allergen">DODAJ ALERGEN</string>
    <string name="after_qr">PO KODZIE KRESKOWYM</string>
    <string name="after_ingredients_photo">PO ZDJĘCIU SKŁADU</string>
    <string name="qr_scanner">QR SKANER</string>
    <string name="photo">ZDJĘCIE</string>
    <string name="camera_button">camera button</string>
    <string name="confirm">ZATWIERDŹ</string>
    <string name="choose_allergen">Wybierz Alergen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_button">ImageButton</string>
    <string name="text_scanner">TEKST SKANER</string>
    <string name="allergy_symptoms_1">Symptomy Alergi czesc 1</string>
    <string name="allergy_symptoms_2">Symptomy alergii czesc 2</string>
    <string name="symptoms_of_allergic">SYMPTOMY ALERGII</string>
    <string name="possible_symptoms">MOŻLIWE SYMPTOMY</string>
    <string name="forget_password">ZAPOMNIAŁEŚ HASŁA?</string>
    <string name="enter_your_email">WPISZ SWÓJ EMAIL NA KTÓRY BĘDZIEMY MOGLI WYSŁAĆ KOD RESETUJĄCY TWOJE HASŁO</string>
</resources>