<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCD5AE"
    android:orientation="vertical">

    <TextView
        android:layout_width="400sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3sp"
        android:layout_marginTop="20sp"
        android:text="@string/region"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190sp"
        android:contentDescription="@string/allergy_symptoms_1"
        app:srcCompat="@drawable/region1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-15dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190sp"
        android:contentDescription="@string/allergy_symptoms_2"
        app:srcCompat="@drawable/region2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalendar1"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="40dp"
            android:background="@drawable/ripple"
            android:text="@string/calendarBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/ripple"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>