<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityusermain"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".UserTools.UserMain">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="120sp"
        android:text="@string/username"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAllergens"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="60sp"
        android:background="@drawable/ripple"
        android:text="@string/allergens"
        android:textColor="@color/text_color"
        android:textSize="15sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckProduct"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/ripple"
        android:text="@string/check_product"
        android:textColor="@color/text_color"
        android:textSize="15sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalendarDust"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/ripple"
        android:text="@string/calendar_dust"
        android:textColor="@color/text_color"
        android:textSize="15sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140sp"
        android:layout_marginTop="100sp"
        android:background="@drawable/ripple"
        android:text="@string/log_out"
        android:textColor="@color/text_color"
        android:textSize="15sp"/>
</LinearLayout>