<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCD5AE"
    android:orientation="vertical"
    tools:context=".Account.MainActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="100dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="10sp"
        android:text="@string/enter_your_email"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edx_reset_password"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="30sp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edx_text"
        android:hint="@string/e_mail_data"
        android:inputType="textEmailAddress"
        android:paddingStart="13sp"
        tools:ignore="RtlSymmetry,TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_confirm"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"

            android:background="@drawable/ripple"
            android:text="@string/confirm"
            android:textColor="@color/text_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset_cancel"
            android:layout_width="160sp"
            android:layout_height="wrap_content"

            android:background="@drawable/ripple"
            android:text="@string/cancel"
            android:textColor="@color/text_color" />
    </LinearLayout>
</LinearLayout>