<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCD5AE"
    android:orientation="vertical"
    tools:context=".Account.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/main_page_title"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="250sp"
        android:layout_height="250sp"
        android:layout_marginHorizontal="75sp"
        android:layout_marginTop="25sp"
        android:contentDescription="@string/allergicMan"
        android:src="@drawable/activity_main_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginIn"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_background"
        android:text="@string/log_in"
        android:textColor="@color/text_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="@color/text_color"/>

</LinearLayout>

