<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCD5AE"
        android:orientation="vertical"
        tools:context=".photo.QrPhoto">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110sp"
            android:layout_marginTop="30sp"
            android:text="@string/qr_scanner"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="20sp"
            android:text="@string/photo"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivQrCode"
            android:layout_width="300sp"
            android:layout_height="250sp"
            android:layout_marginStart="50sp"
            android:background="@color/white" />

        <ImageButton
            android:id="@+id/btnTakeQrPhoto"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="150sp"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/camera_button"
            android:src="@drawable/button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmQrPhoto"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30sp"
                android:background="@drawable/button_background"
                android:text="@string/confirm"
                android:textColor="@color/text_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelQrPhoto"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textColor="@color/text_color" />
        </LinearLayout>
    </LinearLayout>
</layout>