<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCD5AE"
        android:orientation="vertical"
        tools:context=".photo.TextRecog">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95sp"
            android:layout_marginTop="30sp"
            android:text="@string/text_scanner"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTextResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:text="@string/photo"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivTextRec"
            android:layout_width="300sp"
            android:layout_height="250sp"
            android:layout_marginStart="50sp"
            android:background="@color/white" />

        <ImageButton
            android:id="@+id/btnTakeTextPhoto"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_marginStart="150sp"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/camera_button"
            android:src="@drawable/button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmTakeTextRec"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:background="@drawable/button_background"
                android:text="@string/confirm"
                android:textColor="@color/text_color" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close_text_rec"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:textColor="@color/text_color" />
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>