<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".Account.LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="60sp"
        android:text="@string/log_in"
        android:textColor="@color/text_color"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="60sp"
        android:text="@string/e_mail"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edxEmailLog"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="15sp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edx_text"
        android:hint="@string/e_mail_data"
        android:inputType="textEmailAddress"
        android:paddingStart="13sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="60sp"
        android:text="@string/password"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edxPasswordLog"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="15sp"
        android:autofillHints="password"
        android:background="@drawable/edx_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="13sp"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogInLog"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="100sp"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textColor="@color/text_color"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelLog"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:background="@drawable/button_background"
            android:text="@string/cancel"
            android:textColor="@color/text_color" />
    </LinearLayout>
</LinearLayout>