<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".UserTools.UserAllergens">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90sp"
        android:layout_marginTop="50sp"
        android:text="@string/choose_allergen"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allergenList"
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_marginStart="50sp"
        android:layout_marginTop="20sp"
        tools:listitem="@layout/allergen_item"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30sp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_addAllergen"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_background"
            android:text="@string/btn_add_allergen" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_CancelAllergen"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_marginStart="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_background"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>